force-app/main/default/objects/Partner_Data__c/Partner_Data__c.object-meta.xml
<CustomObject>
    <label>Partner Data</label>
    <nameField>
        <label>Partner Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>