force-app/main/default/objects/Partner_Data__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Do not use Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Partners Data Employee</relationshipLabel>
    <relationshipName>Partners_Data_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>