force-app/main/default/objects/Partner_Data__c/fields/JobDescription__c.field-meta.xml
<CustomField>
    <fullName>JobDescription__c</fullName>
    <label>Job Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>