force-app/main/default/objects/Partner_Data__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will reference the OOTB ServiceResource object and will represent Employee</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Partners Data</relationshipLabel>
    <relationshipName>Partners_Data</relationshipName>
    <type>Lookup</type>
</CustomField>