force-app/main/default/objects/Partner_Data__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Partners Data Work Order</relationshipLabel>
    <relationshipName>Partners_Data_WorkOrder</relationshipName>
    <type>Lookup</type>
</CustomField>