force-app/main/default/objects/Partner_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Work_Order__c</columns>
    <columns>Employee__c</columns>
    <columns>NAME</columns>
    <columns>JobDescription__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ExternalRefID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>