force-app/main/default/objects/Partner_Data__c/listViews/Foreman.listView-meta.xml
<ListView>
    <fullName>Foreman</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Employee__c</columns>
    <columns>JobDescription__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee__c</field>
        <operation>contains</operation>
        <value>QAForeman1</value>
    </filters>
    <label>Foreman</label>
</ListView>